--- a/style.css
+++ b/style.css
@@ -3,8 +3,100 @@
 
 /* Colors */
 :root {
-    --bg: hsl(185, 75%, 39%)
-    --title: hsl(229, 23%, 23%)
-    --text: hsl(227, 10%, 46%)
-    --border: hsl(0, 0%, 59%)
+  --bg: hsl(185, 75%, 39%);
+  --title: hsl(229, 23%, 23%);
+  --text: hsl(227, 10%, 46%);
+  --border: hsl(0, 0%, 59%);
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Kumbh Sans", sans-serif;
+  font-weight: 400;
+}
+span, p {
+    color: var(--text)
+}
+.container {
+  height: 100vh;
+  background-color: var(--bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card {
+    position: relative;
+    height: 60%;
+    border-radius: 20px;
+    /* box-shadow: 1px 1px 20px 1px var(--title); */
+    width: 85%;
+    max-width: 300px;
+    background-color: #fff;
+}
+
+header {
+    height: 35%;
+    background-image: url('./images/bg-pattern-card.svg');
+    border-radius: 20px 20px 0 0;
+}
+.card__img {
+    border: 5px solid #fff;
+}
+.card__img, .card__img img {
+    border-radius: 50%;
+}
+.card__title, .stat__num {
+    font-size: 18px;
+}
+.card__title h4, .stat__num {
+    color: var(--title);
+    font-weight: 700;
+}
+.card__title h4{
+    display: inline-block;
+    padding-right: 5px;
+}
+.card__title {
+    margin: .8em ;
+}
+.card__profile p {
+    font-size: 14px;
+}
+.card__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(-33%)
+}
+.card__profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    border-top: 1px solid var(--border);
+    width: 100%;
+    height: 25%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.card__stats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card__stats span {
+    font-size: 10px;
+    margin-top: 5px;
+    letter-spacing: 2px;
+}
+
