--- a/style.css
+++ b/style.css
@@ -83,12 +83,20 @@ header {
 footer {
   position: absolute;
   bottom: 0;
-  border-top: 1px solid var(--border);
   width: 100%;
   height: 25%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 1px;
+    width: 100%;
+    background-color: var(--border);
+    opacity: .3;
 }
 .card__stats span {
   font-size: 10px;
