--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   --text: hsl(227, 10%, 46%);
   --border: hsl(0, 0%, 59%);
 }
+ 
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +22,9 @@ span,
 p {
   color: var(--text);
 }
-/* fonts */
+
+/* Fonts */
+
 .card__title,
 .stat__num {
   font-size: 18px;
@@ -31,26 +34,47 @@ p {
   color: var(--title);
   font-weight: 700;
 }
-/* flex layout */
+
+/* Flex layout */
+
 .card__stats,
 .card__profile,
 .card__info,
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
-/* ************************ */
-.card__img,
-.card__img img {
-  border-radius: 50%;
-}
+
 .container {
   height: 100vh;
   background-color: var(--bg);
 }
+
+/* Background bubbles */
+
+.container::before,
+.container::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.container::before {
+  content: url("./images/bg-pattern-top.svg");
+  transform: translate(-105%, -85%);
+}
+.container::after {
+    content: url('./images/bg-pattern-bottom.svg');
+    transform: translate(0%, -3%);
+}
+
+/* **************** */
+
 .card {
+  z-index: 2;
   position: relative;
   height: 23rem;
   border-radius: 20px;
@@ -58,28 +82,34 @@ p {
   max-width: 340px;
   background-color: #fff;
 }
-
 header {
   height: 35%;
   background-image: url("./images/bg-pattern-card.svg");
   border-radius: 20px 20px 0 0;
 }
+.card__info {
+    transform: translateY(-33%);
+  }
 .card__img {
   border: 5px solid #fff;
 }
+.card__img,
+.card__img img {
+  border-radius: 50%;
+}
+.card__profile p {
+    font-size: 14px;
+  }
 .card__title h4 {
   display: inline-block;
   padding-right: 5px;
 }
 .card__title {
-  margin: 1em 0 .6em;
+  margin: 1em 0 0.6em;
 }
-.card__profile p {
-  font-size: 14px;
-}
-.card__info {
-  transform: translateY(-33%);
-}
+
+/* **************** */
+
 footer {
   position: absolute;
   bottom: 0;
@@ -90,13 +120,13 @@ footer {
   align-items: center;
 }
 footer::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    height: 1px;
-    width: 100%;
-    background-color: var(--border);
-    opacity: .3;
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 1px;
+  width: 100%;
+  background-color: var(--border);
+  opacity: 0.3;
 }
 .card__stats span {
   font-size: 10px;
